--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ remote_theme: "mmistakes/minimal-mistakes@4.20.1"
 
 # Site Settings
 locale: "en-US"
-title: "372 Blog"
+title: "LogBook"
 title_separator: "_"
-subtitle: "Logbook of my coding voyage" # site tagline that appears below site title in masthead
+subtitle: "of my coding voyage" # site tagline that appears below site title in masthead
 name: "372DEV"
-description: "A dev trainee."
+description: "Learning Java ATM"
 url: https://372dev.github.io
 baseurl: "" # the subpath of your site, e.g. "/blog"
 repository: "https://github.com/372dev/372dev.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -97,13 +97,13 @@ analytics:
 author:
   name: "372DEV"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Welcome."
+  bio: "Never limit your challenge. Challenge your limits."
   location: "Anyang-si, S.Korea"
   email: "372dev@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:372dev@gmail.com"
+      # url: "mailto:372dev@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -134,7 +134,7 @@ footer:
       # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-      # url:
+      url: https://github.com/372dev
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
